@@ -9,6 +9,8 @@ Ipe 7.2.28
  * Link to manual and Ipelib documentation online instead of
    installing it locally by default.
 
+ * Add "-tolerance" option to iperender (#461).
+
 ----------------------------------------------------------------------
 
 Ipe 7.2.27 (2023-05-05)
